fix alignment

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -484,7 +484,7 @@ footer {
             width: 100%;  
         }
         & ul {
-            margin: auto;
+            margin: 1em auto;
             width: 30%;
         }
     }
